Ran the Code Cleanup wizard and fixed all issues identified by Eclipse and the FindBugs utility.